tdf#145610: lists should not have includeUpperLevels < 1

Unlike its name, this variable stores *total* amount of levels
to includes, so during conversion even empty list format to
prefix/suffix/includeupperlevels we should keep last one above
zero so list even in future will not have issues with levels
to display.

Change-Id: I4992c1ac0194f381df9f7b965ecdb2d688892b30